--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             </a>
         </h1>
         <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-          Who do I talk to?  Repo owner or admin Other community or team contact  
+          Who do I talk to?  Repo owner or admin Other community or team contact my email is&hellip;  
         </div>
           <a href="http://example.org/posts/my-first-post/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
         
